crates/toml_edit/tests/fixtures/invalid/string/bad-uni-esc-1.stderr
TOML parse error at line 1, column 13
  |
1 | str = "val\ue"
  |             ^
Invalid unicode 4-digit hex code
